<resources>
    <string name="app_name">LeadMeClassroom-Companion</string>
    <string name="connect">Connect</string>
    <string name="username">Username</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="placeholder_content_text">Content Text</string>
    <string name="placeholder_title">Title</string>
    <string name="launch">Launch</string>
    <string name="placeholder_error_text">Error Text</string>
    <string name="required_username">Username is required.</string>
    <string name="room_code">Please enter the room code!</string>
    <string name="enter">Enter</string>
    <string name="leadme_icon">LeadMe icon</string>
    <string name="hint">Hint</string>
    <string name="enter_username">Please enter your name</string>
    <string name="library">Library</string>
    <string name="change_name">Change name</string>
    <string name="logout">Logout</string>
    <string name="enable_permissions">Please enable the permissions below</string>
    <string name="overlay_permission">Overlay</string>
    <string name="usage_stats_permission">Usage Stats</string>
    <string name="storage_permission">Storage</string>
</resources>