<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/reconnect_overlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="40dp"
        app:alignItems="center"
        app:flexDirection="column"
        app:justifyContent="space_between">


        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignItems="center"
            app:flexDirection="column">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/placeholder_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:text="@string/placeholder_content_text"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:alignItems="center"
            app:flexDirection="column">

            <TextView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:labelFor="@+id/text_entry"
                android:text="@string/username"/>

            <EditText
                android:id="@+id/text_entry"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                android:inputType="textCapSentences"/>

            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="25dp"
                android:text="@string/placeholder_error_text"
                android:textSize="11sp"
                android:textAlignment="center"
                android:textColor="@color/red_error"
                android:visibility="gone"/>
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:alignItems="center"
            app:flexDirection="column">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_button"
                android:layout_width="228dp"
                android:layout_height="60dp"
                android:elevation="0dp"
                android:letterSpacing="0"
                android:paddingVertical="10dp"
                android:stateListAnimator="@null"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"
                app:cornerRadius="10dp"
                app:layout_flexShrink="0"
                app:rippleColor="@color/grey" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="228dp"
                android:layout_height="60dp"
                android:elevation="0dp"
                android:letterSpacing="0"
                android:paddingVertical="10dp"
                android:stateListAnimator="@null"
                android:text="@string/dismiss"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:backgroundTint="@color/grey"
                app:cornerRadius="10dp"
                app:layout_flexShrink="0"
                app:rippleColor="@color/white" />
        </com.google.android.flexbox.FlexboxLayout>

    </com.google.android.flexbox.FlexboxLayout>
</RelativeLayout>
