<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="com.lumination.leadmeclassroom_companion.ui.login.classcode.ClassCodeViewModel" />
        <variable
            name="login"
            type="com.lumination.leadmeclassroom_companion.ui.login.classcode.ClassCodeViewModel" />
    </data>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy"
        app:flexDirection="column"
        app:justifyContent="center"
        app:alignItems="center">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{(login.overlayPermission &amp;&amp; login.usageStatPermission &amp;&amp; login.storagePermission) ? View.VISIBLE : View.GONE}"
            app:flexDirection="column"
            app:justifyContent="center"
            app:alignItems="center">

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:textFontWeight="700"
                android:textColor="@color/white"
                android:text="@string/room_code" />

            <com.alimuzaffar.lib.pin.PinEntryEditText
                android:id="@+id/room_code"
                android:layout_width="234dp"
                android:layout_height="62dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:maxLength="4"
                android:textIsSelectable="true"
                android:hint=""
                android:inputType="text"
                android:cursorVisible="false"
                android:layoutDirection="ltr"
                android:text="@{login.loginCode}"
                android:enabled="@{login.overlayPermission &amp;&amp; login.usageStatPermission &amp;&amp; login.storagePermission}"
                app:pinBackgroundDrawable="@drawable/background_pin_input"
                app:pinBackgroundIsSquare="false"
                app:pinLineColors="@color/black"
                app:pinLineStroke="2dp"
                app:pinLineStrokeSelected="4dp"
                app:pinTextBottomPadding="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_room_code"
                android:layout_width="228dp"
                android:layout_height="66dp"
                android:elevation="0dp"
                android:letterSpacing="0"
                android:stateListAnimator="@null"
                android:text="@string/enter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:backgroundTint="@{login.loginCode.length == 4 ? @color/blue : @color/grey, default=@color/grey}"
                android:enabled="@{login.loginCode.length == 4}"
                app:cornerRadius="10dp"
                app:layout_flexShrink="0"
                app:rippleColor="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/red_error"
                android:visibility="@{login.errorCode.length > 0 ? View.VISIBLE : View.INVISIBLE}"
                android:text="@{login.errorCode}" />
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{(login.overlayPermission &amp;&amp; login.usageStatPermission &amp;&amp; login.storagePermission) ? View.GONE : View.VISIBLE}"
            app:flexDirection="column">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:textFontWeight="700"
                android:textColor="@color/white"
                android:text="@string/enable_permissions"
                android:textAlignment="center"/>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:flexDirection="row"
                app:justifyContent="space_around">

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:flexDirection="column"
                    app:alignItems="center">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:id="@+id/usage_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:enabled="@{!login.usageStatPermission}"
                        app:backgroundTint="@color/navy"
                        app:iconSize="50dp"
                        app:iconPadding="-5dp"
                        app:icon="@{login.usageStatPermission ? @drawable/icon_correct_success_tick : @drawable/icon_permission_stats}"
                        app:iconGravity="textStart"
                        app:iconTint="@{login.usageStatPermission ? @color/green_success : @color/white}"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:textColor="@color/white"
                        android:text="@string/usage_stats_permission"
                        android:textAlignment="center"/>
                </com.google.android.flexbox.FlexboxLayout>

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:flexDirection="column"
                    app:alignItems="center">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:id="@+id/overlay_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:enabled="@{!login.overlayPermission}"
                        app:backgroundTint="@color/navy"
                        app:iconSize="50dp"
                        app:iconPadding="-5dp"
                        app:icon="@{login.overlayPermission ? @drawable/icon_correct_success_tick : @drawable/icon_permission_overlay}"
                        app:iconGravity="textStart"
                        app:iconTint="@{login.overlayPermission ? @color/green_success : @color/white}"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:textColor="@color/white"
                        android:text="@string/overlay_permission"
                        android:textAlignment="center"/>
                </com.google.android.flexbox.FlexboxLayout>

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:flexDirection="column"
                    app:alignItems="center">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:id="@+id/storage_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:enabled="@{!login.storagePermission}"
                        app:backgroundTint="@color/navy"
                        app:iconSize="50dp"
                        app:iconPadding="-5dp"
                        app:icon="@{login.storagePermission ? @drawable/icon_correct_success_tick : @drawable/icon_permission_storage}"
                        app:iconGravity="textStart"
                        app:iconTint="@{login.storagePermission ? @color/green_success : @color/white}"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:textColor="@color/white"
                        android:text="@string/storage_permission"
                        android:textAlignment="center"/>
                </com.google.android.flexbox.FlexboxLayout>
            </com.google.android.flexbox.FlexboxLayout>
        </com.google.android.flexbox.FlexboxLayout>

    </com.google.android.flexbox.FlexboxLayout>
</layout>